# IPGLAMPS

./: lib
build2/src/: Start.sh  Start_slurm.sh
full/branches/initialState/build2/src/: GO.sh
full/branches/initialState/src/: analysis.cpp  analysis.h  analysis_hydro.cpp  analysis_hydro.h  cascade.cpp  cascade.h  cellcontainer.cpp  cellcontainer.h  configBAMPS.h.in  configuration.h  coordinateBins.cpp  framework.cpp  global.h  heavyIonCollision.cpp  heavyIonCollision.h  initialmodel.cpp  initialmodel.h  initialmodel_cgc.cpp  initialmodel_heavyquarks.cpp  initialmodel_heavyquarks.h  initialmodel_hydroParametrization.cpp  initialmodel_hydroParametrization.h  initialmodel_minijets.cpp  initialmodel_pythia.h  initialmodel_pythia_online.cpp  initialmodel_pythia_online.h  initialmodel_simple.cpp  offlineoutput.cpp  particle.h  ringcontainer.cpp
lib/branches/initialStateLib/: CMakeCustomPackageOptions.cmake  CMakeLists.txt  CTestConfig.cmake  ConfigureDoxygenTarget.cmake  Doxyfile.in  README
lib/branches/initialStateLib/cmake_modules/: CppcheckTargets.cmake  FindFastjet.cmake  FindLog4cxx.cmake  FindROOT.cmake  HostProperties.cmake  SetCompilersAndBuildFlags.cmake
lib/branches/initialStateLib/progs/: CMakeLists.txt  xx_OpenMP_TaskReduction.cpp  xx_VectorTiming.cpp
lib/branches/initialStateLib/src/: CMakeLists.txt  FPT_compare.h  TSC.h  TimerClock.h  allocator.h  averager.cpp  averager.h  bampsvector.h  binary_cross_sections.cpp  binary_cross_sections.h  binning.cpp  binning.h  binning2.cpp  binning2.h  binning3.cpp  binning3.h  binningMulti.h  centralityclass.cpp  centralityclass.h  configBAMPS.h.in  configurationbase.cpp  configurationbase.h  conservation.h  coupling.cpp  coupling.h  debug.h  globalsettings.h  hadroncrosssection.h  hydroParticleType.cpp  hydroParticleType.h  hydroTensor.cpp  hydroTensor.h  integrand23.cpp  integrand23.h  integrand32.cpp  integrand32.h  integrate.cpp  integrate.h  interactiontype.cpp  interactiontype.h  (+46 more)
lib/branches/initialStateLib/tests/: 00_cmake.cpp  01_lorentz.cpp  02_vector.cpp  03_tsampling.cpp  03_tsampling_asConst.cpp  04_tsampling_HQ.cpp  05_testI32.cpp  06_outputformat.cpp  07_vectoralign.cpp  08_testXS.cpp  09_testCentrality.cpp  10_random.cpp  11_cs22test.cpp  12_cs23test.cpp  13_rotation.cpp  21_averager.cpp  31_randomlist.cpp  32_rangen_distr.cpp  33_hydroTensor.cpp  99_binary_cross_sections.cpp  99_centralityclass.cpp  99_coupling.cpp  99_integrand23.cpp  99_integrand32.cpp  99_integrate.cpp  99_interpolation22.cpp  99_interpolation23.cpp  99_interpolation32.cpp  99_interpolationGSL.cpp  99_interpolation_n_dimensions.cpp  99_particleprototype.cpp  99_ratesmanager.cpp  99_scattering22.cpp  99_scattering22_hydro.cpp  99_scattering23.cpp  99_scattering32.cpp  CMakeLists.txt  plotVectorTiming.gp  xx_TEMPLATE.cpp
src/: CMakeLists.txt  analysis.cpp  configuration.cpp  coordinateBins.h  global.cpp  initialmodel_CYM.cpp  initialmodel_CYM.h  initialmodel_cgc.h  initialmodel_minijets.h  initialmodel_pythia.cpp  initialmodel_pythia_offline.cpp  initialmodel_pythia_offline.h  initialmodel_simple.h  offlineoutput.h  particle.cpp  pdfinterface.cpp  pdfinterface.h  ringcontainer.h  ringstructure.cpp  ringstructure.h  woodsaxon.cpp  woodsaxon.h
